--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serialize-javascript": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
